2008-07-22  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* pf.c (S_socket_fabricate_address): Drop one reference from addr since
	we only take the send right.
	* socket.c (S_socket_name): Likewise.

2007-11-13  Thomas Schwinge  <tschwinge@gnu.org>

	* io.c (S_io_stat): Adapt to ``struct stat'' changes.

2005-05-17  Neal H. Walfield  <neal@gnu.org>

	* sock.c (sock_free): Don't destroy SOCK->CONNECT_QUEUE.

2002-06-08  Roland McGrath  <roland@frob.com>

	* io.c (S_io_identity): Use ino_t for FILENO.

2002-05-08  Roland McGrath  <roland@frob.com>

	* io.c (S_io_reauthenticate): unsigned -> size_t
	(S_io_restrict_auth): Likewise.

2002-04-24  Ognyan Kulev <ogi@fmi.uni-sofia.bg>

	* sock.c (sock_shutdown): When both SHUTDOWN_READ and
	SHUTDOWN_WRITE are set in FLAGS unlock sock->lock after all
	processing of `sock' is finished.
	(sock_create): Replace bzero with memset.

2001-12-22  Roland McGrath  <roland@frob.com>

	* connq.c (connq_compress): #if 0 out unused function.

	* sock.h (sock_deref): Don't define this extern inline.
	Instead, use static inline and __attribute__ ((unused)).
	* mig-decls.h (begin_using_sock_user_port): Likewise.
	(end_using_sock_user_port): Likewise.
	(begin_using_addr_port): Likewise.
	(end_using_addr_port): Likewise.

2001-03-31  Roland McGrath  <roland@frob.com>

	* sock.c: Include "connq.h" for connq_destroy decl.

2001-02-20  Marcus Brinkmann  <marcus@gnu.org>

	* connq.c: Include <assert.h>. Reported by Arkadi E. Shishlov
	<arkadi@it.lv>.

2001-02-11  Marcus Brinkmann  <marcus@gnu.org>

	* connq.c (connq_destroy): New function.
	* connq.h: Prototype connq_destroy.
	* sock.c (sock_free): Call connq_destroy when listen or connect
	queue exist.

2000-08-09  Mark Kettenis  <kettenis@gnu.org>

	* pf.c (S_socket_create): Only accept S_IFCHR, S_IFSOCK and
	S_IFIFO as `magic' protocols.

2000-08-02  Mark Kettenis  <kettenis@gnu.org>

	Add `magic' protocols to specify the file type of a sockets.  This